WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266916
AX: AccessibilityNodeObject::textUnderElement fails to retrieve text in many types of common shadow DOM scenarios
https://bugs.webkit.org/show_bug.cgi?id=266916
Summary
AX: AccessibilityNodeObject::textUnderElement fails to retrieve text in many ...
Tyler Wilcock
Reported
2023-12-27 17:23:48 PST
This is a Safari 17 regression from
https://bugs.webkit.org/show_bug.cgi?id=261376
. We attempted a fix in
https://bugs.webkit.org/show_bug.cgi?id=264410
, but that missed many scenarios. See:
https://bugs.webkit.org/show_bug.cgi?id=266804
https://bugs.webkit.org/show_bug.cgi?id=266789
https://bugs.webkit.org/show_bug.cgi?id=266717
Attachments
Patch
(14.21 KB, patch)
2023-12-27 17:32 PST
,
Tyler Wilcock
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(16.68 KB, patch)
2023-12-27 18:57 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-27 17:23:57 PST
<
rdar://problem/120223342
>
Tyler Wilcock
Comment 2
2023-12-27 17:32:23 PST
Created
attachment 469222
[details]
Patch
Tyler Wilcock
Comment 3
2023-12-27 18:57:40 PST
Created
attachment 469224
[details]
Patch
EWS
Comment 4
2023-12-29 12:10:00 PST
Committed
272531@main
(179399e470cc): <
https://commits.webkit.org/272531@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469224
[details]
.
Tyler Wilcock
Comment 5
2023-12-29 12:19:22 PST
***
Bug 266717
has been marked as a duplicate of this bug. ***
Tyler Wilcock
Comment 6
2023-12-29 12:20:07 PST
***
Bug 266789
has been marked as a duplicate of this bug. ***
Tyler Wilcock
Comment 7
2023-12-29 12:20:22 PST
***
Bug 266804
has been marked as a duplicate of this bug. ***
Steve Repsher
Comment 8
2023-12-29 12:50:21 PST
Excellent - thanks. If possible, please let me know when it lands in production so I can notify our users.
Steve Repsher
Comment 9
2024-01-23 10:48:59 PST
Fixes do not appear to have made it in 17.3.
Tyler Wilcock
Comment 10
2024-01-23 10:52:24 PST
(In reply to Steve Repsher from
comment #9
)
> Fixes do not appear to have made it in 17.3.
Hey Steve, indeed this fix is not in 17.3. This fix should be in a Safari Technology Preview soon, I'll make sure to write here when it's available to test. Thanks for your patience.
Tyler Wilcock
Comment 11
2024-01-24 15:30:31 PST
(In reply to Steve Repsher from
comment #9
)
> Fixes do not appear to have made it in 17.3.
This fix is in STP 187, feel free to test it out if interested!
https://webkit.org/blog/14931/release-notes-for-safari-technology-preview-187/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug